--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "homepage": "http://OsaidKharoub.githup.io/React-p",
   "name": "my-ultra-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://OsaidKharoub.github.io/React-App-",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,9 +18,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
